--- a/landing2/src/App.css
+++ b/landing2/src/App.css
@@ -1,14 +1,20 @@
 body{
-    margin-left: 130px;
-    margin-right: 100px;
     background-color: #f08b77; 
 }
+
+
+
+
+.menu__item{
+    margin-right: 50px;
+}
+
 
 header nav{
     float: right;
     padding-top: 39px;
-    justify-content: center;
-    align-items: center;
+    margin-left: 130px;
+    margin-right: 220px;
 }
 
 header nav ul{
@@ -19,6 +25,15 @@ header nav ul{
   
 header nav ul li{
     list-style: none;
+}
+
+
+header nav ul li a:hover{
+    background-color: #3040CC;
+    color: #fff;
+    text-decoration: none;
+    transition: 0.3s;
+    padding: 20px;
 }
   
 header nav ul li a{
@@ -34,5 +49,193 @@ header nav ul li button{
     color: white;
     padding: 18px;
 }
+
+.top{
+    padding-top: 45px;
+    padding-left: 207px;
+    line-height: 0.1;
+    margin-left: 50px;
+}
+
+.Get-rid-of-stuff {
+    width: 754px;
+    height: 165px;
+    font-family: Monaco;
+    font-size: 80px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 0.98;
+    letter-spacing: -0.5px;
+    color: #2b292d;
+    padding-left: 126px;
+    padding-top: 177px;
+    margin-left: 130px;
+    margin-right: 100px;
+}
+
+.Give-things-you-no-l {
+    width: 490px;
+    height: 136px;
+    font-family: Monaco;
+    font-size: 24px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.42;
+    letter-spacing: normal;
+    color: #2b292d;
+    padding-left: 130px;
+    padding-top: 185px;
+    margin-left: 130px;
+    margin-right: 100px;
+}
+
+.choto{
+    padding-left: 126px;
+    padding-top: 150px;
+    margin-left: 130px;
+    margin-right: 100px;
+}
+
+.choto-2{
+    background-color: #3040CC;
+    border: none;
+    color: white;
+    padding: 18px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.choto-3{
+    background-color: white;
+    border: none;
+    color: #3040CC;
+    padding: 18px;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-left: 40px;
+}
+
+.choto-4{
+    background-color: #3040CC;
+    border: none;
+    color: white;
+    padding: 4px;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-left: 5px;
+}
+
+.choto-2 a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.choto-3 a{
+    color: #3040CC;;
+    text-decoration: none;
+}
+
+.content{
+    background-color: #f4f5f7;
+    padding-top: 60px;
+    margin-top: 100px;
+    padding-bottom: 160px;
+}
+
+.container{
+    background-color: #f4f5f7;
+    font-size: 25px;
+    word-spacing: 8px;
+    line-height: 30px;
+    display: flex;
+    justify-content: space-between; 
+    line-height: 40px;
+}
+
+.content-2{
+    background-color: #f4f5f7;
+}
+
+.container-2{
+    background-color: #ff4f5f7;
+    font-size: 25px;
+    line-height: 30px;
+    word-spacing: 10px;
+    display: flex;
+    justify-content: end; 
+    padding-right: 300px;
+    line-height: 40px;
+    padding-bottom: 150px;
+}
+
+.text{
+    word-spacing: 15px;
+}
+
+.content-3{
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between; 
+}
+
+.container-3{
+    padding-top: 45px;
+    padding-left: 257px;
+    padding-bottom: 45px;
+}
+
+.Some-reminder-for-th {
+    padding-top: 45px;
+    width: 412px;
+    height: 127px;
+    font-family: Monaco;
+    font-size: 18px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.44;
+    letter-spacing: normal;
+    color: rgba(43, 41, 45, 0.6);
+}
+
+.Shortcut1-Shortcut23 {
+    padding-top: 45px;
+    padding-right: 500px;
+    width: 292px;
+    height: 175px;
+    font-family: Monaco;
+    font-size: 18px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.67;
+    letter-spacing: normal;
+    color: rgba(43, 41, 45, 0.6);
+}
+
+.content-4{
+    background-color: #fff;    
+    padding-top: 8px;
+    padding-left: 257px;
+    padding-bottom: 8px;
+}
+
+.container-4{
+    width: 183px;
+    height: 22px;
+    font-family: WorkSans;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.57;
+    letter-spacing: normal;
+    word-spacing: 10px;
+    color: rgba(43, 41, 45, 0.6);
+}
+
+
 
 
