--- a/landing/src/App.css
+++ b/landing/src/App.css
@@ -92,7 +92,7 @@
 
 .logo-fix{
     border-radius: 13px;
-    margin-top: 15px;
+    margin-top: 1%;
 }
 
 .text-fix{
@@ -100,6 +100,10 @@
 }
 
 .for-intro{
-    padding-top: 100px;
-    padding-bottom: 200px;
+    padding-top: 8%;
+    padding-bottom: 16%;
+}
+
+.for-content-2{
+    padding-top: 3.6%;
 }
