--- a/landing/src/App.css
+++ b/landing/src/App.css
@@ -53,20 +53,7 @@
     background-color: #f08b77;
 }
 
-.What-kind-of-stuff-y {
-    font-family: Monaco;
-    font-size: 22px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.45;
-    letter-spacing: normal;
-    color: #2b292d;
-}
 
-.text-style-2{
-    color: rgba(43, 41, 45, 0.9);
-}
 
 .Start-your-free-memb {
     font-family: Monaco;
@@ -92,18 +79,58 @@
 
 .logo-fix{
     border-radius: 13px;
-    margin-top: 1%;
 }
 
 .text-fix{
-    line-height: 11px;
+    line-height: 2px;
 }
 
 .for-intro{
-    padding-top: 8%;
-    padding-bottom: 16%;
+    padding-top: 4%;
+    padding-bottom: 4%;
 }
 
-.for-content-2{
-    padding-top: 3.6%;
+.nav-link {
+    color: rgb(3, 3, 3) !important;
+}
+
+.nav-link.active,
+.nav-link:hover {
+    color: #ffffff !important;
+}
+
+.container-fluid {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.bg{
+    background-color: #f4f5f7;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.image-fix{
+    padding-left: 10%;
+}
+
+.start-your-free-fix{
+    padding-top: 4.5%;
+}
+
+@media (min-width: 370px) {
+    .What-kind-of-stuff-y {
+        font-family: Monaco;
+        font-size: 22px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.45;
+        letter-spacing: normal;
+        color: #2b292d;
+    }
+
+    .text-style-2{
+        color: rgba(43, 41, 45, 0.9);
+    }
 }
