--- a/landing/src/App.css
+++ b/landing/src/App.css
@@ -12,7 +12,7 @@
 
 .SVALKA-Important-cla {
     font-family: Monaco;
-    font-size: 28px;
+    font-size: 1.5em;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
@@ -23,7 +23,7 @@
 
 .text-style-1 {
     font-family: Monaco;
-    font-size: 20px;
+    font-size: 1em;
     color: rgba(43, 41, 45, 0.6);
 }
 
@@ -80,7 +80,7 @@
 }
 
 .text-fix{
-    line-height: 2px;
+    line-height: 0.1%;
 }
 
 .for-intro{
