--- a/landing/src/App.css
+++ b/landing/src/App.css
@@ -1,16 +1,4 @@
-.Shortcut1-Shortcut2 {
-    font-family: Monaco;
-    font-size: 18px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.39;
-    letter-spacing: normal;
-    text-align: right;
-    color: #2b292d;
-}
-
-.SVALKA-Important-cla {
+.header {
     font-family: Monaco;
     font-size: 1.5em;
     font-weight: normal;
@@ -21,13 +9,21 @@
     color: rgba(43, 41, 45, 1);
 }
 
-.text-style-1 {
+.logo-fix{
+    border-radius: 13px;
+}
+
+.text-fix{
+    line-height: 0.1%;
+}
+
+.text-style-for-header {
     font-family: Monaco;
     font-size: 1em;
     color: rgba(43, 41, 45, 0.6);
 }
 
-.Get-rid-of-stuff {
+.heading-for-the-first-block {
     font-family: Monaco;
     font-size: 80px;
     font-weight: normal;
@@ -38,7 +34,7 @@
     color: #2b292d;
 }
 
-.Give-things-you-no-l {
+.text-for-the-first-block {
     font-family: Monaco;
     font-size: 24px;
     font-weight: normal;
@@ -49,22 +45,7 @@
     color: #2b292d;
 }
 
-.card {
-    background-color: #f08b77;
-}
-
-.Start-your-free-memb {
-    font-family: Monaco;
-    font-size: 40px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1;
-    letter-spacing: -0.25px;
-    color: #2b292d;
-}
-
-.We-hate-spam-and-wil {
+.heading-for-the-second-block {
     font-family: Monaco;
     font-size: 22px;
     font-weight: normal;
@@ -72,18 +53,14 @@
     font-stretch: normal;
     line-height: 1.45;
     letter-spacing: normal;
+    color: #2b292d;
+}
+
+.text-for-the-second-block {
     color: rgba(43, 41, 45, 0.9);
 }
 
-.logo-fix{
-    border-radius: 13px;
-}
-
-.text-fix{
-    line-height: 0.1%;
-}
-
-.for-intro{
+.indentation{
     padding-top: 4%;
     padding-bottom: 4%;
 }
@@ -118,56 +95,28 @@
     padding-left: 10%;
 }
 
-.start-your-free-fix{
+.padding-for-the-third-block{
     padding-top: 4.5%;
 }
 
-@media (min-width: 370px) {
-    .What-kind-of-stuff-y {
-        font-family: Monaco;
-        font-size: 22px;
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: 1.45;
-        letter-spacing: normal;
-        color: #2b292d;
-    }
-
-    .text-style-2{
-        color: rgba(43, 41, 45, 0.9);
-    }
-}
-
-.Some-reminder-for-th {
+.heading-for-the-third-block {
     font-family: Monaco;
-    font-size: 18px;
+    font-size: 40px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.44;
-    letter-spacing: normal;
-    color: rgba(43, 41, 45, 0.6);
+    line-height: 1;
+    letter-spacing: -0.25px;
+    color: #2b292d;
 }
 
-.Shortcut1-Shortcut2-3 {
+.text-for-the-third-block {
     font-family: Monaco;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.67;
+    line-height: 1.45;
     letter-spacing: normal;
-    color: rgba(43, 41, 45, 0.6);
-}
-
-.Terms-Privacy-Licens {
-    font-family: WorkSans;
-    font-size: 14px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.57;
-    letter-spacing: normal;
-    color: rgba(43, 41, 45, 0.6);
+    color: rgba(43, 41, 45, 0.9);
 }
