--- a/landing/src/App.css
+++ b/landing/src/App.css
@@ -1,60 +1,29 @@
-body{
-    background-color: #f08b77; 
+.header {
+    font-family: Monaco;
+    font-size: 1.5em;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.39;
+    letter-spacing: normal;
+    color: rgba(43, 41, 45, 1);
 }
 
-.menu__item{
-    margin-right: 50px;  
+.logo-fix{
+    border-radius: 13px;
 }
 
-header nav{
-    float: right;
-    padding-top: 39px;
-    margin-left: 130px;
-    margin-right: 220px;
+.text-fix{
+    line-height: 0.1%;
 }
 
-header nav ul{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-  
-header nav ul li{
-    list-style: none;
+.text-style-for-header {
+    font-family: Monaco;
+    font-size: 1em;
+    color: rgba(43, 41, 45, 0.6);
 }
 
-header nav ul li a:hover{
-    background-color: #3040CC;
-    color: #fff;
-    text-decoration: none;
-    transition: 0.3s;
-    padding: 20px;
-}
-  
-header nav ul li a{
-    color: black;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 0 30px;
-}
-  
-header nav ul li button{
-    background-color: #3040CC;
-    border: none;
-    color: white;
-    padding: 18px;
-}
-
-.top{
-    padding-top: 45px;
-    padding-left: 207px;
-    line-height: 0.1;
-    margin-left: 50px;
-}
-
-.Get-rid-of-stuff {
-    width: 754px;
-    height: 165px;
+.heading-for-the-first-block {
     font-family: Monaco;
     font-size: 80px;
     font-weight: normal;
@@ -63,15 +32,9 @@ header nav ul li button{
     line-height: 0.98;
     letter-spacing: -0.5px;
     color: #2b292d;
-    padding-left: 126px;
-    padding-top: 177px;
-    margin-left: 130px;
-    margin-right: 100px;
 }
 
-.Give-things-you-no-l {
-    width: 490px;
-    height: 136px;
+.text-for-the-first-block {
     font-family: Monaco;
     font-size: 24px;
     font-weight: normal;
@@ -80,153 +43,80 @@ header nav ul li button{
     line-height: 1.42;
     letter-spacing: normal;
     color: #2b292d;
-    padding-left: 130px;
-    padding-top: 185px;
-    margin-left: 130px;
-    margin-right: 100px;
 }
 
-.choto{
-    padding-left: 126px;
-    padding-top: 150px;
-    margin-left: 130px;
-    margin-right: 100px;
-}
-
-.choto-2{
-    background-color: #3040CC;
-    border: none;
-    color: white;
-    padding: 18px;
-    padding-left: 40px;
-    padding-right: 40px;
-}
-
-.choto-3{
-    background-color: white;
-    border: none;
-    color: #3040CC;
-    padding: 18px;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-left: 40px;
-}
-
-.choto-4{
-    background-color: #3040CC;
-    border: none;
-    color: white;
-    padding: 4px;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-left: 5px;
-}
-
-.choto-2 a{
-    color: #fff;
-    text-decoration: none;
-}
-
-.choto-3 a{
-    color: #3040CC;;
-    text-decoration: none;
-}
-
-.content{
-    background-color: #f4f5f7;
-    padding-top: 60px;
-    margin-top: 100px;
-    padding-bottom: 160px;
-}
-
-.container{
-    background-color: #f4f5f7;
-    font-size: 25px;
-    word-spacing: 8px;
-    line-height: 30px;
-    display: flex;
-    justify-content: space-between; 
-    line-height: 40px;
-}
-
-.content-2{
-    background-color: #f4f5f7;
-}
-
-.container-2{
-    background-color: #f4f5f7;
-    font-size: 25px;
-    line-height: 30px;
-    word-spacing: 10px;
-    display: flex;
-    justify-content: end; 
-    padding-right: 300px;
-    line-height: 40px;
-    padding-bottom: 150px;
-}
-
-.text{
-    word-spacing: 15px;
-}
-
-.content-3{
-    background-color: #fff;
-    display: flex;
-    justify-content: space-between; 
-}
-
-.container-3{
-    padding-top: 45px;
-    padding-left: 257px;
-    padding-bottom: 45px;
-}
-
-.Some-reminder-for-th {
-    padding-top: 45px;
-    width: 412px;
-    height: 127px;
+.heading-for-the-second-block {
     font-family: Monaco;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.44;
+    line-height: 1.45;
     letter-spacing: normal;
-    color: rgba(43, 41, 45, 0.6);
+    color: #2b292d;
 }
 
-.Shortcut1-Shortcut23 {
-    padding-top: 45px;
-    padding-right: 500px;
-    width: 292px;
-    height: 175px;
+.text-for-the-second-block {
+    color: rgba(43, 41, 45, 0.9);
+}
+
+.indentation{
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.nav-link {
+    color: rgb(3, 3, 3) !important;
+}
+
+.nav-link.active,
+.nav-link:hover {
+    color: #ffffff !important;
+}
+
+.container-fluid {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.bg{
+    background-color: #f4f5f7;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.bg-2{
+    background-color: #ffffff;
+    padding-top: 3%;
+    padding-bottom: 4%;
+}
+
+.image-fix{
+    padding-left: 10%;
+}
+
+.padding-for-the-third-block{
+    padding-top: 4.5%;
+}
+
+.heading-for-the-third-block {
     font-family: Monaco;
-    font-size: 18px;
+    font-size: 40px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    color: rgba(43, 41, 45, 0.6);
+    line-height: 1;
+    letter-spacing: -0.25px;
+    color: #2b292d;
 }
 
-.content-4{
-    background-color: #fff;    
-    padding-top: 8px;
-    padding-left: 257px;
-    padding-bottom: 8px;
-}
-
-.container-4{
-    width: 183px;
-    height: 22px;
-    font-family: WorkSans;
-    font-size: 14px;
+.text-for-the-third-block {
+    font-family: Monaco;
+    font-size: 22px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.57;
+    line-height: 1.45;
     letter-spacing: normal;
-    word-spacing: 10px;
-    color: rgba(43, 41, 45, 0.6);
+    color: rgba(43, 41, 45, 0.9);
 }
