--- a/landing/src/App.css
+++ b/landing/src/App.css
@@ -175,3 +175,9 @@
     font-size: 0.8em;
     color: rgba(43, 41, 45, 0.6);
 }
+
+@media (min-width: 768px) {
+    .min-width-371-md {
+        min-width: 371.82px;
+    }
+}
